@startuml
' Entity Relationship Diagram (ERD) untuk Database PostgreSQL

title Diagram Database (ERD) Helpdesk

!define Table(name,desc) class name as "desc" << (T, #FFAAAA) >>
!define Col(name,type,pk,fk) name : type << pk fk >>

Table(User, "users") {
Col(id, "int", "PK", "")
Col(name, "VARCHAR(255)", "", "")
Col(email, "VARCHAR(255)", "", "")
Col(password, "VARCHAR(255)", "", "")
Col(role, "Role", "", "")
Col(instansi, "VARCHAR(255)", "", "")
}

Table(Service, "services") {
Col(id, "UUID", "PK", "")
Col(name, "VARCHAR(255)", "", "")
Col(description, "TEXT", "", "")
Col(default_sla_hours, "INTEGER", "", "")
}

Table(Ticket, "tickets") {
Col(id, "UUID", "PK", "")
Col(ticket_number, "VARCHAR(50)", "", "")
Col(title, "VARCHAR(255)", "", "")
Col(status, "Status", "", "")
Col(priority, "Priority", "", "")
Col(requester_id, "UUID", "", "FK")
Col(assignee_id, "UUID", "", "FK")
Col(service_id, "UUID", "", "FK")
Col(created_at, "TIMESTAMP", "", "")
Col(completed_at, "TIMESTAMP", "", "")
}

Table(Feedback, "feedbacks") {
Col(id, "UUID", "PK", "")
Col(rating, "INTEGER", "", "")
Col(review, "TEXT", "", "")
Col(ticket_id, "UUID", "", "FK")
Col(created_at, "TIMESTAMP", "", "")
}

' Relasi
User "1" ||--o{ "0.." Ticket : "requester_id"
User "1" ||--o{ "0.." Ticket : "assignee_id"
Service "1" ||--o{ "0..*" Ticket : "service_id"
Ticket "1" ||--|| "1" Feedback : "ticket_id"

@enduml